--- a/16_SFML_Games/16_SFML_Games.vcxproj
+++ b/16_SFML_Games/16_SFML_Games.vcxproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <ClCompile Include="16_SFML_Games.cpp" />
     <ClCompile Include="arkanoid.cpp" />
+    <ClCompile Include="arkanoidTestLogic.cpp" />
     <ClCompile Include="asteroids.cpp" />
     <ClCompile Include="bejeweled.cpp" />
     <ClCompile Include="chess.cpp" />
@@ -94,6 +95,7 @@
     <ClCompile Include="xonix.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="arkanoidTestLogic.h" />
     <ClInclude Include="Connector.hpp" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="Player.h" />
